Ajout section temoignages UI

--- a/public/index.html
+++ b/public/index.html
@@ -181,12 +181,65 @@
   </section>
 
   <!-- Social Proof (placeholder, à compléter plus tard) -->
-  <section class="section">
-    <div class="container">
-      <h2 class="section-title">Loved by Busy Couples & Families</h2>
-      <p>Reviews will appear here soon.</p>
+ <section id="testimonials" class="section">
+  <div class="container">
+    <h2 class="section-title">Loved by Busy Couples &amp; Families</h2>
+
+    <div class="reviews-grid" role="list">
+      <!-- Card 1 -->
+      <article class="review-card" role="listitem">
+        <header class="review-head">
+          <div class="avatar" aria-hidden="true">RG</div>
+          <div class="reviewer">
+            <div class="name">Romain G.</div>
+            <div class="stars" aria-label="5 out of 5 stars">
+              <span aria-hidden="true">★★★★★</span>
+            </div>
+          </div>
+        </header>
+        <p class="review-text">
+          Service ultra fiable et soigné. Communication claire, maison impeccable
+          en respectant nos enfants et notre chien. On a enfin l’esprit libre !
+        </p>
+      </article>
+
+      <!-- Card 2 -->
+      <article class="review-card" role="listitem">
+        <header class="review-head">
+          <div class="avatar" aria-hidden="true">CE</div>
+          <div class="reviewer">
+            <div class="name">Cédric E.</div>
+            <div class="stars" aria-label="5 out of 5 stars">
+              <span aria-hidden="true">★★★★★</span>
+            </div>
+          </div>
+        </header>
+        <p class="review-text">
+          Organisation pro, résultats constants. Les détails comptent vraiment
+          (joints, plinthes, miroirs). Parfait pour notre rythme chargé.
+        </p>
+      </article>
+
+      <!-- Card 3 -->
+      <article class="review-card" role="listitem">
+        <header class="review-head">
+          <div class="avatar" aria-hidden="true">WB</div>
+          <div class="reviewer">
+            <div class="name">Wilfrid B.</div>
+            <div class="stars" aria-label="5 out of 5 stars">
+              <span aria-hidden="true">★★★★★</span>
+            </div>
+          </div>
+        </header>
+        <p class="review-text">
+          Très belle expérience : ponctualité, soin des surfaces blanches, odeur
+          fraîche discrète. Rapport qualité/prix top, on recommande.
+        </p>
+      </article>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- Footer -->
   <footer class="site-footer">
