texte du temoignage mis a jour

--- a/public/index.html
+++ b/public/index.html
@@ -181,7 +181,7 @@
   <!-- Social Proof (placeholder, à compléter plus tard) -->
  <section id="testimonials" class="section">
   <div class="container">
-    <h2 class="section-title">Loved by Busy Couples &amp; Families</h2>
+    <h2 class="section-title">+320 foyers servis avec 5 etoiles</h2>
 
     <div class="reviews-grid" role="list">
       <!-- Card 1 -->
