mise a jour de la section prix

--- a/public/index.html
+++ b/public/index.html
@@ -159,20 +159,19 @@
   <!-- Pricing (table simple) -->
   <section class="section alt">
     <div class="container">
-      <h2 class="section-title">Transparent Pricing, Premium Results</h2>
+      <h2 class="section-title">Tarifs clairs et transparents</h2>
       <div class="perks">
-        <div class="perk"><h3>Flat-rate clarity</h3><p>No surprises: total includes taxes.</p></div>
-        <div class="perk"><h3>Premium eco products</h3><p>Safe for families & pets.</p></div>
-        <div class="perk"><h3>Reliable schedule</h3><p>Morning / Afternoon / Evening.</p></div>
+        <div class="perk"><p>Pas de frais caches - prix affiche avant validation</p></div>
+        <div class="perk"><p>Annulation gratuite a tout moment</p></div>
+        <div class="perk"><p>Produits certifies child-safe inclus</p></div>
       </div>
       <div class="pricing-table">
         <div class="row head">
-          <div>Home Type</div><div>Standard</div><div>Deep</div>
+          <div>Service</div><div>A partir de</div><div>Details inclus</div>
         </div>
-        <div class="row"><div>Studio</div><div>From $110</div><div>From $150</div></div>
-        <div class="row"><div>1BR</div><div>From $130</div><div>From $180</div></div>
-        <div class="row"><div>2BR</div><div>From $150</div><div>From $210</div></div>
-        <div class="row"><div>3–4BR</div><div>From $170</div><div>From $240</div></div>
+        <div class="row"><div>Standard</div><div>$119</div><div>Surface visible</div></div>
+        <div class="row"><div>Deep</div><div>$149</div><div>+ Surface invisible(interieur frigo, four...)</div></div>
+        <div class="row"><div>Extras</div><div>$20-30</div><div>Four, frigo, etc.</div></div>
       </div>
       <a class="btn cta" href="#lead-form">Book Your Clean</a>
     </div>
