maj tableau prix

--- a/public/index.html
+++ b/public/index.html
@@ -170,7 +170,7 @@
           <div>Service</div><div>A partir de</div><div>Details inclus</div>
         </div>
         <div class="row"><div>Standard</div><div>$119</div><div>Surface visible</div></div>
-        <div class="row"><div>Deep</div><div>$149</div><div>+ Surface invisible(interieur frigo, four...)</div></div>
+        <div class="row"><div>Deep</div><div>$149</div><div>+ Surface invisible</div></div>
         <div class="row"><div>Extras</div><div>$20-30</div><div>Four, frigo, etc.</div></div>
       </div>
       <a class="btn cta" href="#lead-form">Book Your Clean</a>
