--- a/public/index.html
+++ b/public/index.html
@@ -167,7 +167,7 @@
       </div>
       <div class="pricing-table">
         <div class="row head">
-          <div>Service</div><div>A partir de</div><div>Details inclus</div>
+          <div>Service</div><div>from</div><div>Details inclus</div>
         </div>
         <div class="row"><div>Standard</div><div>$119</div><div>Surface visible</div></div>
         <div class="row"><div>Deep</div><div>$149</div><div>+ Surface invisible</div></div>
