--- a/public/index.html
+++ b/public/index.html
@@ -73,24 +73,24 @@
       <h2 class="section-title">Get Your Personalized Quote</h2>
       <form class="form" id="quote-form" novalidate>
         <div class="field">
-          <label for="fullname">Full Name</label>
+          <label for="fullname">Full Name*</label>
           <input id="fullname" name="fullname" type="text" placeholder="John Doe" required />
         </div>
         <div class="field">
-          <label for="email">Email</label>
+          <label for="email">Email*</label>
           <input id="email" name="email" type="email" placeholder="you@example.com" required />
         </div>
         <div class="field">
-          <label for="phone">Phone</label>
+          <label for="phone">Phone*</label>
           <input id="phone" name="phone" type="tel" inputmode="tel" placeholder="+1 917 555 2103" required />
         </div>
         <div class="field">
-          <label for="service_address">Service Address</label>
+          <label for="service_address">Service Address*</label>
           <input id="service_address" name="service_address" type="text" placeholder="42-11 28th Ave, Astoria" required />
         </div>
 
         <div class="field">
-          <label for="service_type">Service Type</label>
+          <label for="service_type">Service Type*</label>
           <select id="service_type" name="service_type" required>
             <option value="">Choisir…</option>
             <option value="standard">Standard</option>
@@ -99,7 +99,7 @@
         </div>
 
         <div class="field">
-          <label for="number_of_bedrooms">Number of Bedrooms</label>
+          <label for="number_of_bedrooms">Number of Bedrooms*</label>
           <select id="number_of_bedrooms" name="number_of_bedrooms" required>
             <option value="">Choisir…</option>
             <option value="studio">Studio</option>
@@ -111,7 +111,7 @@
         </div>
 
         <div class="field">
-          <label for="preferred_date">Preferred Date</label>
+          <label for="preferred_date">Preferred Date*</label>
           <input id="preferred_date" name="preferred_date" type="date" required />
         </div>
 
