--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
   <!-- Benefits -->
   <section class="section alt">
     <div class="container">
-      <h2 class="section-title">Why People Choose Us</h2>
+      <h2 class="section-title">Why People Choose </h2>
       <div class="benefits">
         <div class="benefit">
           <h3>Impeccable Results</h3>
