--- a/public/index.html
+++ b/public/index.html
@@ -253,7 +253,9 @@
     </div>
   </footer>
 
-  <script src="/assets/js/main.js" defer></script>
-  <script src="/assets/js/form.js" defer></script>
+ <!-- Chargement JS — garder un seul fichier -->
+<script src="/assets/js/main.js?v=20251023a" defer></script>
+<!-- <script src="/assets/js/form.js?v=20251023a" defer></script> -->
+
 </body>
 </html>
