--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
   <!-- Benefits -->
   <section class="section alt">
     <div class="container">
-      <h2 class="section-title">Why People Choose </h2>
+      <h2 class="section-title">Why People Love Us </h2>
       <div class="benefits">
         <div class="benefit">
           <h3>Impeccable Results</h3>
@@ -253,9 +253,7 @@
     </div>
   </footer>
 
- <!-- Chargement JS — garder un seul fichier -->
-<script src="/assets/js/main.js?v=20251023a" defer></script>
-<!-- <script src="/assets/js/form.js?v=20251023a" defer></script> -->
-
+  <script src="/assets/js/main.js" defer></script>
+  <script src="/assets/js/form.js" defer></script>
 </body>
 </html>
