--- a/public/index.html
+++ b/public/index.html
@@ -239,7 +239,7 @@
 
     <!-- CTA vers le formulaire -->
     <div class="cta-wrapper">
-      <a href="#quote-form" class="cta-button">Book Your Clean</a>
+      <a href="#quote-form" class="btn cta">Book Your Clean</a>
     </div>
   </div>
 </section>
