maj cta espacement vertical

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,9 @@
         <li>Family & pet safe</li>
         <li>Queens’ finest cleaners</li>
       </ul>
-      <a class="btn cta" href="#lead-form">Book Your Clean</a>
+      <div class="cta-wrapper">
+        <a class="btn cta" href="#lead-form">Book Your Clean</a>
+      </div>
 
       <div class="hero-image">
         <img
@@ -63,7 +65,9 @@
           <p>Professional standards and consistent quality across Queens neighborhoods.</p>
         </div>
       </div>
-      <a class="btn cta" href="#lead-form">Book Your Clean</a>
+      <div class="cta-wrapper">
+        <a class="btn cta" href="#lead-form">Book Your Clean</a>
+      </div>
     </div>
   </section>
 
@@ -132,7 +136,9 @@
         </div>
         -->
 
-        <button type="submit" class="btn cta">Request My Quote</button>
+        <div class="cta-wrapper">
+          <button type="submit" class="btn cta">Request My Quote</button>
+        </div>
 
         <!-- Mini-FAQ accordéon -->
         <section class="mini-faq" aria-label="Frequently Asked Questions">
@@ -175,7 +181,9 @@
         <div class="row"><div>Deep</div><div>$149</div><div>+ Surface invisible</div></div>
         <div class="row"><div>Extras</div><div>$20-30</div><div>Four, frigo, etc.</div></div>
       </div>
-      <a class="btn cta" href="#lead-form">Book Your Clean</a>
+      <div class="cta-wrapper">
+        <a class="btn cta" href="#lead-form">Book Your Clean</a>
+      </div>
     </div>
   </section>
 
