--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         <li>Queens’ finest cleaners</li>
       </ul>
       <div class="cta-wrapper">
-        <a class="btn cta" href="#lead-form">Book Your Clean</a>
+        <a class="btn cta" href="#lead-form">Get a quote in 60s</a>
       </div>
 
       <div class="hero-image">
@@ -121,7 +121,7 @@
 
        
         <div class="field">
-          <label for="time_slot">Time Slot</label>
+          <label for="time_slot">Time Slot*</label>
           <select id="time_slot" name="time_slot" required>
             <option value="">Choisir…</option>
             <option value="morning">Morning</option>
