--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         <li>Queens’ finest cleaners</li>
       </ul>
       <div class="cta-wrapper">
-        <a class="btn cta" href="#lead-form">Get a quote in 60s</a>
+        <a class="btn cta" href="#lead-form">Get A Quote In 60s</a>
       </div>
 
       <div class="hero-image">
