--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         <li>Queens’ finest cleaners</li>
       </ul>
       <div class="cta-wrapper">
-        <a class="btn cta" href="#lead-form">Get A Quote In 60s</a>
+        <a class="btn cta" href="#lead-form">Get A Quote In 45s</a>
       </div>
 
       <div class="hero-image">
@@ -66,7 +66,7 @@
         </div>
       </div>
       <div class="cta-wrapper">
-        <a class="btn cta" href="#lead-form">Book Your Clean</a>
+        <a class="btn cta" href="#lead-form">Get A Quote In 45s</a>
       </div>
     </div>
   </section>
@@ -182,7 +182,7 @@
         <div class="row"><div>Extras</div><div>$20-30</div><div>Four, frigo, etc.</div></div>
       </div>
       <div class="cta-wrapper">
-        <a class="btn cta" href="#lead-form">Book Your Clean</a>
+        <a class="btn cta" href="#lead-form">Get A Quote In 45s</a>
       </div>
     </div>
   </section>
@@ -247,7 +247,7 @@
 
     <!-- CTA vers le formulaire -->
     <div class="cta-wrapper">
-      <a href="#quote-form" class="btn cta">Book Your Clean</a>
+      <a href="#quote-form" class="btn cta">Get A Quote In 45s</a>
     </div>
   </div>
 </section>
