--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,9 @@
   <!-- Header minimal -->
   <header class="site-header">
     <div class="container">
-      <div class="brand">Queens & Clean</div>
+      <div class="brand">
+        <h2 class="brand-name">Queens & Clean</h2>
+      </div>
     </div>
   </header>
 
@@ -23,11 +25,11 @@
   <!-- Hero -->
   <section class="hero">
     <div class="container">
-      <h1 class="h1">The Art of Calm Perfection in Your Home</h1>
+      <h1 class="h1">Respirez. Votre maison retrouve son eclat</h1>
       <ul class="proofs">
-        <li>Premium eco products</li>
-        <li>Family & pet safe</li>
-        <li>Queens’ finest cleaners</li>
+        <li>Garantie retouche 24h</li>
+        <li>Equipe ponctuelle et formee</li>
+        <li>Produits doux, efficaces et eco</li>
       </ul>
       <div class="cta-wrapper">
         <a class="btn cta" href="#lead-form">Get A Quote In 45s</a>
