--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
       <h1 class="h1">Respirez. Votre maison retrouve son eclat</h1>
       <ul class="proofs">
         <li>Garantie retouche 24h</li>
-        <li>Equipe ponctuelle et formee</li>
-        <li>Produits doux, efficaces et eco</li>
+        <li>Equipe ponctuelle</li>
+        <li>Produits eco-friendly</li>
       </ul>
       <div class="cta-wrapper">
         <a class="btn cta" href="#lead-form">Get A Quote In 45s</a>
