maj check price

--- a/public/index.html
+++ b/public/index.html
@@ -171,9 +171,9 @@
     <div class="container">
       <h2 class="section-title">Tarifs clairs et transparents</h2>
       <div class="perks">
-        <div class="perk"><p>Pas de frais caches - prix affiche avant validation</p></div>
-        <div class="perk"><p>Annulation gratuite a tout moment</p></div>
-        <div class="perk"><p>Produits certifies child-safe inclus</p></div>
+        <div class="perk"><p>Pas de frais caches</p></div>
+        <div class="perk"><p>Annulation sans condtions</p></div>
+        <div class="perk"><p>Produits eco-friendly inclus</p></div>
       </div>
       <div class="pricing-table">
         <div class="row head">
