maj privacy et do not sell my infos

--- a/public/index.html
+++ b/public/index.html
@@ -259,7 +259,12 @@
   <!-- Footer -->
   <footer class="site-footer">
     <div class="container">
-      <small>© Queens & Clean · Privacy · Legal · Accessibility</small>
+      <small>
+        © 2025 Queens & Clean · 
+        <a href="/privacy.html" class="footer-link">Privacy Policy</a> |
+        <a href="/donotsell.html" class="footer-link">Do Not Sell or Share My Personal Information</a> 
+
+      </small>
     </div>
   </footer>
 
