--- a/public/index.html
+++ b/public/index.html
@@ -270,59 +270,61 @@
   </footer>
 
 
-  <!-- Minimal Cookie Notice (English, auto-hide after 10s) -->
+  <!-- Minimal Cookie Notice (FR) -->
 <style>
-  #cookie-note {
+  #cookie-note{
     position: fixed; left: 50%; transform: translateX(-50%);
-    bottom: 16px; z-index: 1000;
-    max-width: 640px; width: calc(100% - 24px);
+    bottom: 12px; width: calc(100% - 32px); max-width: 720px;
     background: #fff; color: #333; font-size: 13px; line-height: 1.5;
-    border: 1px solid #e5e5e5; border-radius: 10px;
+    border: 1px solid #e4e6ea; border-radius: 10px;
     box-shadow: 0 8px 24px rgba(0,0,0,.12);
-    padding: 12px 14px; display: none;
+    padding: 12px 14px; z-index: 1000;
+    display: flex; gap: 10px; align-items: center; justify-content: space-between;
   }
-  #cookie-note a { color: #0066cc; text-decoration: underline; text-underline-offset: 3px; }
-  #cookie-note button {
+  #cookie-note a{ color: inherit; text-decoration: underline; text-underline-offset: 3px; }
+  #cookie-note button{
     appearance: none; border: none; background: transparent; cursor: pointer;
-    color: #666; font-weight: 600; padding: 6px 8px; margin-left: 8px; border-radius: 6px;
+    padding: 6px 10px; border-radius: 6px; font-weight: 600;
   }
-  #cookie-note button:hover { background: #f5f5f5; }
-  #cookie-note .row { display: flex; gap: 10px; align-items: center; justify-content: space-between; }
-  #cookie-note .text { margin-right: 8px; }
+  #cookie-note button:hover{ background:#f5f5f5; }
+  @media (max-width: 380px){
+    #cookie-note{ flex-direction: column; align-items: stretch; gap: 8px; }
+    #cookie-note button{ align-self: flex-end; }
+  }
 </style>
 
 <div id="cookie-note" role="status" aria-live="polite">
-  <div class="row">
-    <div class="text">
-      By continuing to browse this site, you agree to the use of cookies. 
-      <a href="/privacy.html">Learn more</a>.
-    </div>
-    <div>
-      <button id="cookie-note-close" aria-label="Close cookie notice">OK</button>
-    </div>
-  </div>
+  <span>
+    En continuant d’utiliser ce site, vous acceptez les cookies.
+    <a href="/privacy.html">En savoir plus</a>.
+  </span>
+  <button id="cookie-note-close" aria-label="Fermer l’avis cookies">OK</button>
 </div>
 
 <script>
-  (function () {
-    const KEY = 'cookie-note-dismissed';
-    const note = document.getElementById('cookie-note');
-    const closeBtn = document.getElementById('cookie-note-close');
+(function () {
+  const KEY = 'cookie-note-v2';               // <-- nouvelle clé pour éviter l’ancienne
+  const note = document.getElementById('cookie-note');
+  const closeBtn = document.getElementById('cookie-note-close');
 
-    if (!localStorage.getItem(KEY)) {
-      note.style.display = 'block';
-      // Auto-hide after 10 seconds
-      setTimeout(() => {
-        note.style.display = 'none';
-        localStorage.setItem(KEY, '1');
-      }, 10000);
-    }
+  // Si déjà accepté, on masque immédiatement
+  if (localStorage.getItem(KEY) === '1') {
+    note.style.display = 'none';
+    return;
+  }
 
-    closeBtn && closeBtn.addEventListener('click', () => {
-      localStorage.setItem(KEY, '1');
-      note.style.display = 'none';
-    });
-  })();
+  // Auto-fermeture après 10s + mémorisation
+  setTimeout(() => {
+    note.style.display = 'none';
+    localStorage.setItem(KEY, '1');
+  }, 10000);
+
+  // Clic sur OK
+  closeBtn.addEventListener('click', () => {
+    localStorage.setItem(KEY, '1');
+    note.style.display = 'none';
+  });
+})();
 </script>
 
 
