maj2 des events viewcontent clickbutton et startform dans main js

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
  
 
   <!-- Hero -->
-  <section class="hero">
+  <section id="hero" class="hero">
     <div class="container">
       <h1 class="h1">Respirez. Votre maison retrouve son eclat</h1>
       <ul class="proofs">
