--- a/public/index.html
+++ b/public/index.html
@@ -293,79 +293,17 @@
   </footer>
 
   
-  <!-- ✅ Minimal Cookie Banner (English + Auto-hide after 10s + Click close) -->
-<style>
-  #cookie-banner {
-    position: fixed;
-    bottom: 16px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: calc(100% - 32px);
-    max-width: 480px;
-    background: #fff;
-    color: #222;
-    font-size: 13px;
-    line-height: 1.5;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    padding: 12px 14px;
-    text-align: center;
-    z-index: 9999;
-    display: none;
-  }
-
-  #cookie-banner a {
-    color: #0066cc;
-    text-decoration: underline;
-    text-underline-offset: 3px;
-  }
-
-  #cookie-banner button {
-    background: transparent;
-    border: none;
-    color: #0066cc;
-    font-weight: 600;
-    margin-left: 6px;
-    cursor: pointer;
-    font-size: 13px;
-  }
-
-  #cookie-banner button:hover {
-    text-decoration: underline;
-  }
-</style>
-
-<div id="cookie-banner" role="status" aria-live="polite">
-  By continuing to browse, you agree to our use of cookies to improve your experience.
-  <a href="/privacy.html">Learn more</a>.
-  <button id="cookie-ok">OK</button>
+<!-- Cookie Consent Banner -->
+<div id="cookie-banner" class="cookie-banner hidden">
+  <p>
+    By continuing to browse this site, you agree to the use of cookies to improve your experience.
+    <a href="/privacy-policy" class="cookie-link">Learn more</a>.
+  </p>
+  <button id="cookie-accept">OK</button>
 </div>
 
-<script>
-  (function() {
-    const banner = document.getElementById("cookie-banner");
-    const btn = document.getElementById("cookie-ok");
-    const KEY = "cookies-accepted";
+<script src="/assets/js/cookies.js" defer></script>
 
-    // Check if cookies already accepted
-    if (!localStorage.getItem(KEY)) {
-      banner.style.display = "block";
-
-      // Auto-hide after 10 seconds
-      setTimeout(() => {
-        banner.style.display = "none";
-        localStorage.setItem(KEY, "true");
-      }, 10000);
-
-      // Hide when clicking OK
-      btn.addEventListener("click", () => {
-        banner.style.display = "none";
-        localStorage.setItem(KEY, "true");
-      });
-    }
-  })();
-</script>
 
 
 
