maj cookies style

--- a/public/index.html
+++ b/public/index.html
@@ -297,7 +297,7 @@
 <div id="cookie-banner" class="cookie-banner hidden">
   <p>
     By continuing to browse this site, you agree to the use of cookies to improve your experience.
-    <a href="/privacy-policy" class="cookie-link">Learn more</a>.
+    <a href="/privacy.html" class="cookie-link">Learn more</a>.
   </p>
   <button id="cookie-accept">OK</button>
 </div>
