--- a/public/index.html
+++ b/public/index.html
@@ -49,14 +49,14 @@
   <!-- Hero -->
   <section id="hero" class="hero">
     <div class="container">
-      <h1 class="h1">Respirez. Votre maison retrouve son eclat</h1>
+      <h1 class="h1">Breathe. Your Home, Perfectly Restored.</h1>
       <ul class="proofs">
-        <li>Garantie retouche 24h</li>
-        <li>Equipe ponctuelle</li>
-        <li>Produits eco-friendly</li>
+        <li>24h Retouch Guarantee</li>
+        <li>Punctual & Trained Team</li>
+        <li>Eco-Certified Products</li>
       </ul>
       <div class="cta-wrapper">
-        <a class="btn cta" href="#lead-form" data-cta="hero">Get A Quote In 45s</a>
+        <a class="btn cta" href="#lead-form" data-cta="hero">Get Your Instant Quote (in 45s)</a>
       </div>
 
       <div class="hero-image">
@@ -92,7 +92,7 @@
         </div>
       </div>
       <div class="cta-wrapper">
-        <a class="btn cta" href="#lead-form" data-cta="benefit">Get A Quote In 45s</a>
+        <a class="btn cta" href="#lead-form" data-cta="benefit">Get Your Instant Quote (in 45s)</a>
       </div>
     </div>
   </section>
@@ -208,7 +208,7 @@
         <div class="row"><div>Extras</div><div>$20-30</div><div>Four, frigo, etc.</div></div>
       </div>
       <div class="cta-wrapper">
-        <a class="btn cta" href="#lead-form" data-cta="pricing">Get A Quote In 45s</a>
+        <a class="btn cta" href="#lead-form" data-cta="pricing">Get Your Instant Quote (in 45s)</a>
       </div>
     </div>
   </section>
@@ -273,7 +273,7 @@
 
     <!-- CTA vers le formulaire -->
     <div class="cta-wrapper">
-      <a href="#quote-form" class="btn cta" data-cta="testimonials">Get A Quote In 45s</a>
+      <a href="#quote-form" class="btn cta" data-cta="testimonials">Get Your Instant Quote (in 45s)</a>
     </div>
   </div>
 </section>
