--- a/public/index.html
+++ b/public/index.html
@@ -74,28 +74,72 @@
   </section>
 
   <!-- Benefits -->
-  <section class="section alt">
-    <div class="container">
-      <h2 class="section-title">Why People Love Us </h2>
-      <div class="benefits">
-        <div class="benefit">
-          <h3>Impeccable Results</h3>
-          <p>We combine premium eco products and precise methods for a calm, pristine home.</p>
-        </div>
-        <div class="benefit">
-          <h3>Flexible Scheduling</h3>
-          <p>Morning, afternoon, or evening—pick a time that fits your routine.</p>
-        </div>
-        <div class="benefit">
-          <h3>Trusted & Insured</h3>
-          <p>Professional standards and consistent quality across Queens neighborhoods.</p>
-        </div>
-      </div>
-      <div class="cta-wrapper">
-        <a class="btn cta" href="#lead-form" data-cta="benefit">Get Your Instant Quote (in 45s)</a>
-      </div>
+ <section class="section alt" aria-labelledby="benefits-title">
+  <div class="container">
+    <h2 id="benefits-title" class="section-title">
+      Why Queens & Clean?
+      <span class="section-subtitle">320+ homes served • 4.9★ average</span>
+    </h2>
+
+    <ul class="benefits-grid" role="list">
+      <!-- 1) Impeccable Results -->
+      <li class="benefit">
+        <span class="benefit__icon" aria-hidden="true">
+          <!-- Sparkle -->
+          <svg viewBox="0 0 24 24" width="28" height="28" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" role="img">
+            <path d="M12 3l2.2 4.8L19 10l-4.8 2.2L12 17l-2.2-4.8L5 10l4.8-2.2L12 3z"/>
+            <path d="M5 18l1.2 2.6L9 21l-2.6 1.2L5 25l-1.2-2.6L1 21l2.6-1.2L5 18z" transform="scale(.7) translate(6 2)"/>
+          </svg>
+        </span>
+        <h3 class="benefit__title">Impeccable Results</h3>
+        <p class="benefit__text">Hotel-level finish, spotless details for a calm, pristine home.</p>
+      </li>
+
+      <!-- 2) Flexible Scheduling -->
+      <li class="benefit">
+        <span class="benefit__icon" aria-hidden="true">
+          <!-- Clock -->
+          <svg viewBox="0 0 24 24" width="28" height="28" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="12" cy="12" r="9"/>
+            <path d="M12 7v6l4 2"/>
+          </svg>
+        </span>
+        <h3 class="benefit__title">Flexible Scheduling</h3>
+        <p class="benefit__text">Morning, afternoon, or evening—pick a time that fits your routine.</p>
+      </li>
+
+      <!-- 3) Trusted & Insured -->
+      <li class="benefit">
+        <span class="benefit__icon" aria-hidden="true">
+          <!-- Shield -->
+          <svg viewBox="0 0 24 24" width="28" height="28" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M12 3l8 3v6c0 5-3.5 8.5-8 9-4.5-.5-8-4-8-9V6l8-3z"/>
+            <path d="M9 12l2 2 4-4"/>
+          </svg>
+        </span>
+        <h3 class="benefit__title">Trusted & Insured</h3>
+        <p class="benefit__text">Background-checked pros. Fully insured for peace of mind.</p>
+      </li>
+    </ul>
+
+    <div class="cta-wrapper">
+      <a class="btn cta" href="#lead-form" data-cta="benefit" aria-label="Get your instant quote in 45 seconds">
+        ⚡ Get Your Instant Quote (in 45s)
+      </a>
+      <p class="micro-trust">Eco-friendly products • Supplies included • Satisfaction guaranteed</p>
     </div>
-  </section>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
 
   <!-- Form -->
   <section class="section" id="lead-form">
