--- a/public/index.html
+++ b/public/index.html
@@ -124,9 +124,8 @@
 
     <div class="cta-wrapper">
       <a class="btn cta" href="#lead-form" data-cta="benefit" aria-label="Get your instant quote in 45 seconds">
-        ⚡ Get Your Instant Quote (in 45s)
+        Get Your Instant Quote (in 45s)
       </a>
-      <p class="micro-trust">Eco-friendly products • Supplies included • Satisfaction guaranteed</p>
     </div>
   </div>
 </section>
