maj section form

--- a/public/index.html
+++ b/public/index.html
@@ -154,33 +154,34 @@
           <input id="email" name="email" type="email" placeholder="you@example.com" required />
         </div>
         <div class="field">
-          <label for="phone">Phone*</label>
+          <label for="phone">Mobile Number*</label>
           <input id="phone" name="phone" type="tel" inputmode="tel" placeholder="+1 917 555 2103" required />
-        </div>
-        <div class="field">
-          <label for="service_address">Service Address*</label>
-          <input id="service_address" name="service_address" type="text" placeholder="42-11 28th Ave, Astoria" required />
         </div>
 
         <div class="field">
-          <label for="service_type">Service Type*</label>
+          <label for="service_type">Type of Cleaning*</label>
           <select id="service_type" name="service_type" required>
-            <option value="">Choisir…</option>
+            <option value="">Select…</option>
             <option value="standard">Standard</option>
             <option value="deep">Deep Cleaning</option>
           </select>
         </div>
 
         <div class="field">
-          <label for="number_of_bedrooms">Number of Bedrooms*</label>
+          <label for="number_of_bedrooms">How Many Bedrooms?*</label>
           <select id="number_of_bedrooms" name="number_of_bedrooms" required>
-            <option value="">Choisir…</option>
+            <option value="">Select…</option>
             <option value="studio">Studio</option>
             <option value="p_1br">1BR</option>
             <option value="p_2br">2BR</option>
             <option value="p_3br">3BR</option>
             <option value="p_4br">4BR</option>
           </select>
+        </div>
+
+          <div class="field">
+          <label for="service_address">Where Should We Clean*</label>
+          <input id="service_address" name="service_address" type="text" placeholder="42-11 28th Ave, Astoria" required />
         </div>
 
         <div class="field">
@@ -192,7 +193,7 @@
         <div class="field">
           <label for="time_slot">Time Slot*</label>
           <select id="time_slot" name="time_slot" required>
-            <option value="">Choisir…</option>
+            <option value="">Select…</option>
             <option value="morning">Morning</option>
             <option value="afternoon">Afternoon</option>
             <option value="evening">Evening</option>
@@ -206,7 +207,12 @@
         -->
 
         <div class="cta-wrapper">
-          <button type="submit" class="btn cta">Request My Quote</button>
+          <button type="submit" class="btn cta">Request My Free Quote</button>
+        </div>
+
+        <div class="trust-box">
+          <p>🔒 Your data is secure — we never share or spam.</p>
+          <p>✔️ Licensed • Insured • Local Queens Team</p>
         </div>
 
         <!-- Mini-FAQ accordéon -->
