--- a/public/index.html
+++ b/public/index.html
@@ -219,8 +219,26 @@
         <section class="mini-faq" aria-label="Frequently Asked Questions">
           <details class="faq-item">
             <summary><span class="faq-q">What’s included?</span><span class="faq-icon" aria-hidden="true">+</span></summary>
-            <div class="faq-a">Standard: kitchen, bathroom, floors, dusting, trash. Deep: plus baseboards, grout edges, tops, appliances, detailed corners.</div>
+            <div class="faq-a">
+        <p>We always bring our own eco-friendly products and professional equipment.</p>
+        <p><strong>Standard Cleaning</strong> covers:</p>
+        <ul>
+          <li>Kitchen — surfaces, sink, trash, floors</li>
+          <li>Bathroom — toilet, shower/tub, mirrors, floors</li>
+          <li>Living areas &amp; bedrooms — dusting, vacuuming, mopping</li>
+        </ul>
+        <p><strong>Deep Cleaning</strong> adds:</p>
+        <ul>
+          <li>Baseboards, grout edges, behind furniture, detailed corners</li>
+          <li>Inside appliances (microwave), fridge exterior, oven door</li>
+          <li>Extra polishing &amp; disinfection of high-touch areas</li>
+        </ul>
+        <p class="note">Add-ons available on request: inside fridge/oven, interior windows, etc.</p>
+      </div>
+
           </details>
+
+
           <details class="faq-item">
             <summary><span class="faq-q">How do I pay?</span><span class="faq-icon" aria-hidden="true">+</span></summary>
             <div class="faq-a">Secure card payment after acceptance. Receipt by email.</div>
