--- a/public/index.html
+++ b/public/index.html
@@ -241,11 +241,26 @@
 
           <details class="faq-item">
             <summary><span class="faq-q">How do I pay?</span><span class="faq-icon" aria-hidden="true">+</span></summary>
-            <div class="faq-a">Secure card payment after acceptance. Receipt by email.</div>
+             <div class="faq-a">
+        <p>You pay <strong>only after the cleaning is completed and approved</strong>.</p>
+        <p>Secure card or mobile payment, with an instant <strong>email receipt</strong>.</p>
+        <ul class="bullets">
+          <li>No prepayment required</li>
+          <li>No hidden fees</li>
+        </ul>
+      </div>
           </details>
+
+
+
+
+
           <details class="faq-item">
             <summary><span class="faq-q">Can I cancel?</span><span class="faq-icon" aria-hidden="true">+</span></summary>
-            <div class="faq-a">Free up to 24h before. Under 24h: minimum fee (details in confirmation email).</div>
+             <div class="faq-a">
+        <p><strong>Yes — anytime, with no penalties or conditions.</strong></p>
+        <p>Just let us know as early as possible so we can reassign your cleaner.</p>
+      </div>
           </details>
         </section>
       </form>
